# Daytrading1.0

./: .env.template  .gitignore  2026-06-16-153805-what-features-would-you-recomant-to-improve-the-o.txt  2026-06-16-173259-can-you-give-me-a-reason-that-the-profits-falls-o.txt  2026-06-16-205842-look-throug-the-code-and-help-me-find-improvement.txt  2026-06-17-171947-look-trough-the-code-see-if-there-are-any-leaks-o.txt  2026-06-18-125816-is-there-any-featurengeniring-that-would-be-benfi.txt  2026-06-19-120554-is-there-a-safeguard-agenst-the-agent-selling-a-s.txt  2026-06-20-102110-is-there-sommething-that-would-be-benificial-to-a.txt  2026-06-21-222223-explane-walk-forward-backtesting.txt  2026-06-22-130502-what-features-are-used-and-how-do-they-work.txt  AGENTS.md  README.md  pipeline.toml  pyproject.toml  run_pipeline.sh  walk_forward_explanation.txt
Admin/: Samarbejdskontrakt_template.doc  gannt.xlsx  logbook.docx  ~$gannt.xlsx  ~$ogbook.docx
data/: stocks-in-use.txt
data/1m/: AI.csv  (+101 more)
scripts/: prepare_data.sh  run_benchmark.py  run_daily_update.py  run_hf_backfill.py  run_plot.py  run_predict.py  run_prepare.py  run_train.py  run_train_meta.py  run_walk_forward.py  run_walk_forward_compare.py  run_weekly_update.py  train.sh  vary_labeller.sh
tests/: test_alpha_vantage_retriever.py  test_benchmarking.py  test_daily_sync.py  test_device.py  test_ensemble_model.py  test_evaluation_runner.py  test_feature_engineering.py  test_hybrid_retriever.py  test_import_month.py  test_index_utils.py  test_kdata_store_target_days.py  test_logreg_model.py  test_meta_features.py  (+4 more)
(+310 files in other folders)
