[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "daytrading"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "edgartools>=5.20.1",
    "huggingface-hub>=1.5.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "neptune>=1.14.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pandas-market-calendars>=5.3.1",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scipy>=1.17.1",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "vectorbt>=0.28.2",
    "wandb>=0.25.0",
    "weave>=0.52.30",
    "yfinance>=1.2.0",
]

#[tool.uv]
#package = true
#
#[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
#
#[tool.hatchling.build.targets.wheel]
#packages = ["src/kvant"]

# Makes imports work efficiently in src directory
[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'win32' or sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
